--- a/src/app/_frontend/globals.css
+++ b/src/app/_frontend/globals.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --background: #ffffff;
@@ -19,3 +16,21 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.grid-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+input[type=submit]:disabled {
+  color: #c5c9d1;
+  background-color: #F0FFF1;
+}
+
+input[type=submit] {
+  cursor: pointer;
+  color:black;
+  background-color: #B3E9C7;
+}
+
