--- a/src/app/_frontend/globals.css
+++ b/src/app/_frontend/globals.css
@@ -1,26 +1,29 @@
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.error-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
+  color: #333;
+  font-family: 'Arial', sans-serif;
+  font-size: 24px;
+  text-align: center;
+  z-index: 1000;
+}
+
 .grid-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 input[type=submit]:disabled {
@@ -28,9 +31,45 @@ input[type=submit]:disabled {
   background-color: #F0FFF1;
 }
 
-input[type=submit] {
+input[type=submit], a {
   cursor: pointer;
   color:black;
   background-color: #B3E9C7;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 32px;
+
+      background-color: #4CAF50; /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 12px; /* Rounded corners */
+      box-shadow: 0 4px #999; /* Shadow */
+}
+
+a:hover {
+    color:white; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
+
+.flex {
+  display:flex;
+  width: 100%;
+}
+
+.flex-center {
+  justify-content: center;
 }
 
